--- a/gallery/new.html
+++ b/gallery/new.html
@@ -93,13 +93,8 @@
               <!-- <li class="filter filter-active" data-filter=".all">all</li>
               <li class="filter" data-filter=".branding">branding</li>
               <li class="filter" data-filter=".mockups">mockups</li> -->
-        <a href="../index.html">Home</a>
-        <a href="electrodes.html" class="smoothScroll">Welding Electrodes</a>
-         <a href="gaswelding.html" class="smoothScroll">Welding & Cutting</a>
-         <a href="grinding.html" class="smoothScroll">Power & Hand tools</a>
-         <a href="new.html" class="smoothScroll">Manual</a>
-
-          
+        <a href="../index.html">Home</a><b style="color:black;">/</b>
+        <a href="electrodes.html#mild">Welding Electrodes</a>
             </ul> 
 
           </div>
