--- a/index.html
+++ b/index.html
@@ -551,9 +551,9 @@ SUGAR, STEEL AND MILLING, MINING & MINERAL PROCESSING, LOAD AND HAUL, STORAGE & 
                     </div>
                 </div>
 
-                 <div class="col-lg-6">
+                 <div class="col-lg-12">
                     <div class="form-group">
-                        <input type="number" class="form-control" name="phone" id="email" style="width:540px;" placeholder="Phone: +255....." required/>
+                        <input type="number" class="form-control" name="phone" id="email" placeholder="Phone: +255....." required/>
                         <div class="validation"></div>
                     </div>
                 </div>
