--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@ SUGAR, STEEL AND MILLING, MINING & MINERAL PROCESSING, LOAD AND HAUL, STORAGE & 
 
                  <div class="col-lg-12">
                     <div class="form-group">
-                        <input type="number" class="form-control" name="phone" id="email" placeholder="Phone: +255....." required/>
+                        <input type="number" class="form-control" name="phone" id="email" placeholder="Phone: +255......." required/>
                         <div class="validation"></div>
                     </div>
                 </div>
