--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@ $(document).ready(function() {
     <div class="container">
       <div class="header-content">
         <center>
-        <h1 style="color:#121212; font-size:90px; font-family: lucida bright;">Welding Alloys Limited. <span class="typed"></span></h1>
-        <h3 style="color:black; font-size:40px;">One stop for welding.</h3>
+        <h1 style="color:		#FF0000; font-size:90px; font-family: lucida bright;">Welding Alloys Limited. <span class="typed"></span></h1>
+        <h3 style="color:blue; font-size:40px;">One stop for welding.</h3>
   
         </center>
         
