--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ $(document).ready(function() {
     <div class="container">
       <div class="header-content">
         <center>
-        <h1 style="color:		#FF0000; font-size:90px; font-family: lucida bright;">Welding Alloys Limited. <span class="typed"></span></h1>
+        <h1 style="color:#FF0000; font-size:90px; font-family: lucida bright;">Welding Alloys Tanzania Limited. <span class="typed"></span></h1>
         <h3 style="color:blue; font-size:40px;">One stop for welding.</h3>
   
         </center>
