--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@ $(document).ready(function() {
     <div class="container">
       <div class="header-content">
         <center>
-        <h1 style="color:#FF0000; font-size:90px; font-family: lucida bright;">Welding Alloys Tanzania Limited. <span class="typed"></span></h1>
-        <h3 style="color:blue; font-size:40px;">One stop for welding.</h3>
+        <h1 style="color:	#BF00FF; font-size:80px; font-family: lucida bright;">Welding Alloys Tanzania Limited. <span class="typed"></span></h1>
+        <h3 style="color:#BF00FF; font-size:40px;">One stop for welding.</h3>
   
         </center>
         
@@ -229,11 +229,11 @@ at the right cost, and at the right time. Welding alloys is here to provide thes
   </div> -->
   <!-- end section services -->
         <center>
-<h2 style="font-size: 25px; margin-top: 80px;">"For over 30 years, we have successfully served various sectors<br> And gained the trust of 500<supp>+</supp> clients."</h2>
+<h2 style="font-size: 25px; margin-top: 80px; color:#BF00FF; font-weight:bold;">"For over 30 years, we have successfully served various sectors<br> And gained the trust of 500<supp>+</supp> clients."</h2>
   <div id="journal">
      
     <div class="container">
-        <h4 style="font-size: 15px; padding-top:40px; color:red;">BELOW, IS AN EXTRACT FROM OUR CLIENT LIST,FEATURING FEW COMPANIES FROM ALL THE SECTORS.</h4>
+        <h4 style="font-size: 19px; padding-top:40px; color:red;">BELOW, IS AN EXTRACT FROM OUR CLIENT LIST,FEATURING FEW COMPANIES FROM ALL THE SECTORS.</h4>
         <table id="companyTable">
             <thead>
                 <tr>
@@ -249,7 +249,7 @@ at the right cost, and at the right time. Welding alloys is here to provide thes
         <div class="pagination">
             <button id="prevPage">Previous</button>
             <span id="pageInfo"></span>
-            <button id="nextPage" style="background-color:blue; color:white; width:90px;">Next</button>
+            <button id="nextPage" class="btnw">Next</button>
         </div>
     </div>
 
@@ -284,8 +284,7 @@ at the right cost, and at the right time. Welding alloys is here to provide thes
             </ul> 
 
           </div>-->
-
-          <div class="portfolio-container">
+ <div class="portfolio-container">
 
             <div class="col-lg-4 col-md-6 portfolio-thumbnail all branding uikits webdesign">
               <!-- <a class="popup-img" href="images/portfolio/1.jpg"> -->
@@ -342,6 +341,7 @@ at the right cost, and at the right time. Welding alloys is here to provide thes
 
           </div>
         </div>
+
       </div>
     </div>
 
@@ -412,7 +412,11 @@ at the right cost, and at the right time. Welding alloys is here to provide thes
     <td>CHAINSAW PNEUMATIC TORQUE WRENCH</td>
     <td>DRILL MACHINES, JIGSAW MACHINE etc</td>
   </tr>
-  <tr>
+  
+</table>
+
+  <table>
+    <tr>
     <th colspan="3">SAFETY & WORKWEAR SOLUTIONS</th>
   </tr>
   <tr>
@@ -430,7 +434,7 @@ at the right cost, and at the right time. Welding alloys is here to provide thes
     <td style="color:red;">OIL AND GAS EQUIPMENTS</td>
     <td style="color:red;">BUILDING MATERIALS TOOLS & ELECTRICALS ITEMS</td>
   </tr>
-</table><BR>
+    </table><br>
 <h4>Our customer base includes industries from all segments such as:<br>
 SUGAR, STEEL AND MILLING, MINING & MINERAL PROCESSING, LOAD AND HAUL, STORAGE & WAREHOUSING, LOGISTICS INDUSTRY, FOOD AND BEVERAGE,  CEMNT INDUSTRY, ETC.</h4>
   <!-- End section portfolio -->
