--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ $(document).ready(function() {
       <div class="header-content">
         <center>
         <h1 style="color:	#BF00FF; font-size:80px; font-family: lucida bright;">Welding Alloys Tanzania Limited. <span class="typed"></span></h1>
-        <h3 style="color:#BF00FF; font-size:40px;">One stop for welding.</h3>
+        <h3 style="color:rgba(141, 4, 4, 0.993); font-size:40px;">One stop for welding.</h3>
   
         </center>
         
