--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ $(document).ready(function() {
       <div class="header-content">
         <center>
         <h1 style="color:	#004085; font-size:80px; font-family: lucida bright; font-weight:bold;">Welding Alloys Tanzania Limited. <span class="typed"></span></h1>
-        <h3 style="color:magenta; font-size:40px;">One stop for welding.</h3>
+        <h3 style="color:aquamarine; font-size:40px; margin-right:50px;">One stop for welding.</h3>
   
         </center>
         
