--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ $(document).ready(function() {
                               "Message: " + message;
 
         var encodedMessage = encodeURIComponent(whatsappMessage);
-        var whatsappUrl = "https://wa.me/255766122648?text=" + encodedMessage;
+        var whatsappUrl = "https://wa.me/255784767778?text=" + encodedMessage;
 
         // Open WhatsApp with the encoded message
         window.open(whatsappUrl, "_blank");
@@ -97,7 +97,8 @@ $(document).ready(function() {
       <div class="container">
 
         <div class="logo">
-          <a href="index.html"><img src="images/logo.png" alt="logo"></a>
+          <a href="index.html"><img src="images/logo2.png" alt="logo"></a>
+          <h3>WELDING ALLOYS LTD</h3>
         </div>
 
         <div class="responsive"><i data-icon="m" class="ion-navicon-round"></i></div>
@@ -124,15 +125,18 @@ $(document).ready(function() {
 
   <!-- start section header -->
   <div id="header" class="home">
-
+<div class="overlay"></div>
     <div class="container">
+      <div class="opp">
       <div class="header-content">
         <center>
         <h1 style="color:	#004085; font-size:80px; font-family: lucida bright; font-weight:bold;">Welding Alloys Tanzania Limited. <span class="typed"></span></h1>
-        <h3 style="color:aquamarine; font-size:40px; margin-right:50px;">One stop for welding.</h3>
-  
+        <h3 style="color:aquamarine; font-size:40px; margin-right:50px;">One stop for welding.</h3>  
+        <h3 style="color:#004085;font-weight:bold;text-align: center; margin-top: 70px;">Mark Leader & Specialist For<br> Welding Rods, Machines, Tools & Equipments Since 1994.</h3>
+
         </center>
-        
+      
+      </div>
       </div>
     </div>
   </div>
@@ -292,7 +296,7 @@ at the right cost, and at the right time. Welding alloys is here to provide thes
               <!-- <a class="popup-img" href="images/portfolio/1.jpg"> -->
                 <a href="gallery/electrodes.html#mild">
                 <img src="images/portfolio/1.jpg" alt="img">
-                <div class="overlay">Consumables</div>
+                <div class="overlay">Welding Rods</div>
               </a>
             </div>
 
@@ -300,7 +304,7 @@ at the right cost, and at the right time. Welding alloys is here to provide thes
               <!-- <a class="popup-img" href="images/portfolio/4.jpg"> -->
                 <a href="gallery/gaswelding.html">
                 <img src="images/portfolio/4.jpg" alt="img">
-                <div class="overlay">Gaswelding & Cutting</div>
+                <div class="overlay">Welding Cutting Accessories</div>
 
               </a>
             </div>
@@ -311,7 +315,7 @@ at the right cost, and at the right time. Welding alloys is here to provide thes
               <!-- <a class="#popup-img" href="images/portfolio/3.jpg"> -->
                 <a href="gallery/gaswelding.html#arc">
                 <img src="images/portfolio/3.jpg" alt="img">
-                <div class="overlay">Arch Welding Equipments</div>
+                <div class="overlay">Welding Machines</div>
               </a>
             </div>
 
@@ -525,10 +529,9 @@ SUGAR, STEEL AND MILLING, MINING & MINERAL PROCESSING, LOAD AND HAUL, STORAGE & 
               <h2 class="mb-30">GET IN TOUCH</h2>
 
               <ul class="contact-details">
-                <li><span>Mwisho Street Dar Es Salaam,Tanzania</span></li>
+                <li><span>Mwisho Street near old Posta Kisutu Dar Es Salaam,Tanzania</span></li>
                 <li><span>PO Box: 14353, Shop #4,Shreeji Tower, Ground Floor</span></li>
-                <li><span>+255 784 767778</span></li>
-                 <li><span>+255 754 781653</span></li>
+                <li><span>+255 784 767778, +255 754 781653, +255 713 781653</span></li>
                 <li><span><a href="mailto:info@weldingalloystz.com" style="color:brown"> info@weldingalloystz.com</a></span></li>
               </ul>
 
@@ -615,8 +618,9 @@ f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x185c4b00760c9433%3A0xae9bdffbc6b2c35f!2sW
       <address style="line-height:27px;">
        <span>Mwisho Street Dar Es Salaam,<br>Tanzania</span></li>
               <span>PO Box: 14353, Shop #4,<br>Shreeji Tower, Ground Floor<br></span>
-              <span>+255 784 767778</span>
-                <span>+255 754 781653</span>
+              <span>+255 784 767778</span><br>
+                <span>+255 754 781653</span><br>
+                <span>+255 755 7137816</span><br>
               <span><a href="mailto:info@weldingalloystz.com" style="color:brown" target="_blank" rel="noopener noreferrer"> info@weldingalloystz.com</a></span>
         <ul class="list-unstyled list-social">
         <a href="https://www.facebook.com/profile.php?id=61574550790207" target="_blank" rel="noopener noreferrer"><i class="ion-social-facebook"></i></a>
