--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@ $(document).ready(function() {
       <div class="opp">
       <div class="header-content">
         <center>
-        <h1 style="color:	#004085; font-size:80px; font-family: lucida bright; font-weight:bold;">Welding Alloys Tanzania Limited. <span class="typed"></span></h1>
-        <h3 style="color:aquamarine; font-size:40px; margin-right:50px;">One stop for welding.</h3>  
-        <h3 style="color:#004085;font-weight:bold;text-align: center; margin-top: 70px;">Mark Leader & Specialist For<br> Welding Rods, Machines, Tools & Equipments Since 1994.</h3>
+        <h1 style="color:	#D2042D; font-size:80px; font-family: lucida bright; font-weight:bold;">Welding Alloys Tanzania Limited. <span class="typed"></span></h1>
+        <h3 style="color:#D2042D; font-size:40px; margin-right:50px;">One stop for welding.</h3>  
+        <h3 style="color:#D2042D;font-weight:bold;text-align: center; margin-top: 70px;">Mark Leader & Specialist For<br> Welding Rods, Machines, Tools & Equipments Since 1994.</h3>
 
         </center>
       
