--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ $(document).ready(function() {
 
         <div class="logo">
           <a href="index.html"><img src="images/logo2.png" alt="logo"></a>
-          <h4>WELDING ALLOYS LTD</h4>
+          <h6>WELDING ALLOYS TANZANIA LIMITED</h6>
         </div>
 
         <div class="responsive"><i data-icon="m" class="ion-navicon-round"></i></div>
@@ -531,7 +531,8 @@ SUGAR, STEEL AND MILLING, MINING & MINERAL PROCESSING, LOAD AND HAUL, STORAGE & 
               <ul class="contact-details">
                 <li><span>Mwisho Street near old Posta Kisutu Dar Es Salaam,Tanzania</span></li>
                 <li><span>PO Box: 14353, Shop #4,Shreeji Tower, Ground Floor</span></li>
-                <li><span>+255 784 767778, +255 754 781653, +255 713 781653</span></li>
+                <li><span>+255 754 781653, +255 713 781653</span></li>
+                <img src="gallery/img/app.png" width="3%"> +255 784 767778
                 <li><span><a href="mailto:info@weldingalloystz.com" style="color:brown"> info@weldingalloystz.com</a></span></li>
               </ul>
 
@@ -541,7 +542,8 @@ SUGAR, STEEL AND MILLING, MINING & MINERAL PROCESSING, LOAD AND HAUL, STORAGE & 
 
          <div class="col-lg-6">
         <form id="whatsappForm">
-            <div class="row">
+          <center>
+            <div class="row" style="padding-left:10%";>
 
                 <div id="sendmessage">Your message has been sent. Thank you!</div>
                 <div id="errormessage"></div>
@@ -587,6 +589,7 @@ SUGAR, STEEL AND MILLING, MINING & MINERAL PROCESSING, LOAD AND HAUL, STORAGE & 
             </div>
         </form>
     </div>
+  </center>
 
           </div>
         </div>
@@ -618,9 +621,9 @@ f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x185c4b00760c9433%3A0xae9bdffbc6b2c35f!2sW
       <address style="line-height:27px;">
        <span>Mwisho Street Dar Es Salaam,<br>Tanzania</span></li>
               <span>PO Box: 14353, Shop #4,<br>Shreeji Tower, Ground Floor<br></span>
-              <span>+255 784 767778</span><br>
-                <span>+255 754 781653</span><br>
-                <span>+255 755 7137816</span><br>
+              <img src="gallery/img/app.png" width="5%"> <span>+255 784 767778</span><br> 
+              <span>+255 754 781653</span><br>
+              <span>+255 755 7137816</span><br>
               <span><a href="mailto:info@weldingalloystz.com" style="color:brown" target="_blank" rel="noopener noreferrer"> info@weldingalloystz.com</a></span>
         <ul class="list-unstyled list-social">
         <a href="https://www.facebook.com/profile.php?id=61574550790207" target="_blank" rel="noopener noreferrer"><i class="ion-social-facebook"></i></a>
