--- a/index.html
+++ b/index.html
@@ -95,11 +95,14 @@ $(document).ready(function() {
   <nav id="main-nav">
     <div class="row">
       <div class="container">
+<div class="logo">
+  <a href="index.html"><img src="images/logo2.png" alt="logo"></a>
+  <h6>
+    <span class="full-name">WELDING ALLOYS TANZANIA LIMITED</span>
+    <span class="short-name">WELDING ALLOYS TZ LMTD</span>
+  </h6>
+</div>
 
-        <div class="logo">
-          <a href="index.html"><img src="images/logo2.png" alt="logo"></a>
-          <h6>WELDING ALLOYS TANZANIA LIMITED</h6>
-        </div>
 
         <div class="responsive"><i data-icon="m" class="ion-navicon-round"></i></div>
 
