--- a/gallery/electrodes.html
+++ b/gallery/electrodes.html
@@ -257,11 +257,11 @@
   <div class="content">
     <div class="section-title">Welding Electrodes</div>
 
-    <div class="subtitle" id="mild">Mild Steel (Showing 3 images)</div>
+    <div class="subtitle" id="mild">Mild Steel Electrodes (Showing 3 images)</div>
     <div class="image-row">
-      <div class="image-box"><a href="img/gallery/mild/1.jpg"><img src="img/gallery/mild/1.jpg" alt=""><div class="image-name">Weldarc</div></a></div>
-      <div class="image-box"><a href="img/gallery/mild/2.jpg"><img src="img/gallery/mild/2.jpg" alt=""><div class="image-name">Fontico</div></a></div>
-      <div class="image-box"><a href="img/gallery/mild/3.jpg"><img src="img/gallery/mild/3.jpg" alt=""><div class="image-name">Fontarc</div></a></div>
+      <div class="image-box"><a href="img/gallery/mild/1.jpg"><img src="img/gallery/mild/1.jpg" alt=""><div class="image-name">Weldarc E 6019</div></a></div>
+      <div class="image-box"><a href="img/gallery/mild/2.jpg"><img src="img/gallery/mild/2.jpg" alt=""><div class="image-name">Fontico E 7018</div></a></div>
+      <div class="image-box"><a href="img/gallery/mild/3.jpg"><img src="img/gallery/mild/3.jpg" alt=""><div class="image-name">Fontarc E 6013</div></a></div>
     </div>
 
     <div class="subtitle">Stainless Steel (Showing 7 images)</div>
