--- a/index.html
+++ b/index.html
@@ -131,15 +131,14 @@ $(document).ready(function() {
 <div class="overlay"></div>
     <div class="container">
       <div class="opp">
-      <div class="header-content">
-        <center>
-        <h1 style="color:	#D2042D; font-size:80px; font-family: lucida bright; font-weight:bold;">Welding Alloys Tanzania Limited. <span class="typed"></span></h1>
-        <h3 style="color:#D2042D; font-size:40px; margin-right:50px;">One stop for welding.</h3>  
-        <h3 style="color:#D2042D;font-weight:bold;text-align: center; margin-top: 70px;">Market Leader & Specialist For<br> Welding Rods, Machines, Tools & Equipments Since 1994.</h3>
+     <div class="header-content">
+  <center>
+    <h1 class="main-title"  style="color:#D2042D;">Welding Alloys Tanzania Limited. <span class="typed"></span></h1>
+    <h3 class="sub-title"  style="color:#D2042D;">One stop shop for welding.</h3>  
+    <h3 class="tagline"  style="color:#D2042D;">Market Leader & Specialist For<br> Welding Rods, Machines, Tools & Equipments Since 1994.</h3>
+  </center>
+</div>
 
-        </center>
-      
-      </div>
       </div>
     </div>
   </div>
@@ -626,7 +625,7 @@ f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x185c4b00760c9433%3A0xae9bdffbc6b2c35f!2sW
               <span>PO Box: 14353, Shop #4,<br>Shreeji Tower, Ground Floor<br></span>
               <img src="gallery/img/app.png" width="5%"> <span>+255 784 767778</span><br> 
               <span>+255 754 781653</span><br>
-              <span>+255 755 7137816</span><br>
+              <span>+255 713 781653</span><br>
               <span><a href="mailto:info@weldingalloystz.com" style="color:brown" target="_blank" rel="noopener noreferrer"> info@weldingalloystz.com</a></span>
         <ul class="list-unstyled list-social">
         <a href="https://www.facebook.com/profile.php?id=61574550790207" target="_blank" rel="noopener noreferrer"><i class="ion-social-facebook"></i></a>
