--- a/index.html
+++ b/index.html
@@ -133,11 +133,14 @@ $(document).ready(function() {
       <div class="opp">
      <div class="header-content">
   <center>
-    <h1 class="main-title"  style="color:#D2042D;">Welding Alloys Tanzania Limited. <span class="typed"></span></h1>
-    <h3 class="sub-title"  style="color:#D2042D;">One stop shop for welding.</h3>  
-    <h3 class="tagline"  style="color:#D2042D;">Market Leader & Specialist For<br> Welding Rods, Machines, Tools & Equipments Since 1994.</h3>
+   
+    <h1 class="main-title"  style="color:#D2042D; background-color:	rgba(255, 255, 255, 0.2);">Welding Alloys Tanzania Limited. <span class="typed"></span></h1>
+    <h3 class="sub-title"  style="color:#D2042D; background-color: rgba(255, 255, 255, 0.2);">One stop shop for welding.</h3>  
+    <h3 class="tagline"  style="color:#D2042D;background-color: rgba(255, 255, 255, 0.2);">Market Leader & Specialist For<br> Welding Rods, Machines, Tools & Equipments Since 1994.</h3>
+
   </center>
 </div>
+
 
       </div>
     </div>
